package com.kamilla.deppplom.groups.data;

import com.fasterxml.jackson.annotation.JsonPropertyOrder;

@JsonPropertyOrder("title")
public class StudentGroupData {

    public String title;

}
