@startuml

hide empty members
allowmixing

title "Пользователи и группы"

package "Группы" as groups {

    class StudentGroupService
    interface StudentGroupRepository

    class StudentGroup {
        + id: Int
        + title: String
    }


    StudentGroupService ..> StudentGroup

'    class StudentGroupRepositoryImpl implements StudentGroupRepository
'    class StudentGroupEntity
'    StudentGroupRepositoryImpl .> StudentGroupEntity

    StudentGroupService ..> StudentGroupRepository
    StudentGroupRepository .> StudentGroup

    class StudentGroupDataService
    StudentGroupDataService .> StudentGroupService
    class StudentGroupData
    StudentGroupDataService ..> StudentGroupData

}

package "Пользователи" as users {

    class UserDataService
    class UserData

'    UserDataService --> UserData
    UserData <. UserDataService
    UserDataService .> UserService

    class UserService
    interface UserRepository

    class User {
        + id: Int
        + name: String
        + login: String
        + password_hash: String
        + role: Role
        + groups: List<StudentGroup>
    }

    enum Role {
        ADMIN
        TEACHER
        STUDENT
    }


'    Role -* User::role
    Role <- User::role
    User::groups --> groups.StudentGroup::id
    User <.. UserRepository

'    class UserRepositoryImpl implements UserRepository
'    class UserEntity
'
'    UserRepositoryImpl .> UserEntity

    UserService ..> UserRepository
    UserService ..> User


}

@enduml